--- a/InvoiceManager/Views/Home/Invoice.cshtml
+++ b/InvoiceManager/Views/Home/Invoice.cshtml
@@ -26,7 +26,7 @@
             if (Model.Invoice.Id == 0)
             {
                 <p class="alert alert-info mt-4 mb-4">
-                    Polatytuł, klient, sposób płatności i termin są
+                    Pola tytuł, klient, sposób płatności i termin są
                     <strong>wymagane</strong>
                 </p>
 
@@ -77,14 +77,17 @@
                    new { @class = "form-control" })
                 </div>
 
-                <button class="btyn btn-primary btn-lf mb-5" type="submit">
+                <button class="btn btn-primary btn-lg mb-5" type="submit">
                     Zapisz
                 </button>
             }
         }
     </div>
     <div class="col-5 offset-lg-1">
-
+        @if (Model.Invoice.Id != 0)
+        {
+            @Html.Partial("_InvoicePosition", Model.Invoice.InvoicePositions)
+        }
     </div>
 </div>
 
