Repositorys and controler comments added

--- a/InvoiceManager/Views/Home/About.cshtml
+++ b/InvoiceManager/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "O mnie";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <p>Robert Wolniewicz Junior.NET Developer.</p>
