--- a/InvoiceManager/Views/Account/Register.cshtml
+++ b/InvoiceManager/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model InvoiceManager.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Rejestracja";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,54 +8,54 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Tworzenie nowego konta.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Address.PostalCode, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Address.PostalCode, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.PostalCode, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Address.City, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Address.City, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.City, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Address.Street, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Address.Street, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.Street, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Address.Number, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Address.Number, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.Number, new { @class = "form-control" })
         </div>
@@ -63,7 +63,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-primary mt-3" value="Rejestracja" />
         </div>
     </div>
 }
