--- a/InvoiceManager/Views/Home/Index.cshtml
+++ b/InvoiceManager/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                     <td>@invoice.PaymentDate.ToString("dd-MM-yyyy")</td>
                     <td>
                         <button class="btn btn-danger btn-sm"
-                                onclick="deleteInvoice()">
+                                onclick="deleteInvoice('@invoice.Id', this)">
                             Usuń
                         </button>
                     </td>
@@ -61,9 +61,29 @@ else
 @section Scripts
 {
     <script type="text/javascript">
-        function deleteInvoice() {
+        function deleteInvoice(id, btn) {
             if (!confirm("Czy napewno chcesz usunąc fakturę?"))
                 return;
+
+            $.ajax({
+                type: 'POST',
+                url: "@Url.Action("Delete", "Home")",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        var row = btn.parentNode.parentNode;
+                        row.parentNode.removeChild(row);
+                    } else {
+                        alert(data.Message);
+                    }
+                },
+                error: function (data) {
+                    alert(data.Message);
+                },
+                dataType: 'json'
+            });
         }
     </script>
 }
