GeneratePDF, Client action, Product action and Invoice action added

--- a/InvoiceManager/Content/Site.css
+++ b/InvoiceManager/Content/Site.css
@@ -21,3 +21,10 @@
     background-color: #777;
     border-color: #fff
 }
+
+.field-validation-erroe {
+    color: #ff3333;
+}
+.dropdown-menu {
+    color: #ffffff8C;
+}
