--- a/InvoiceManager/Views/Account/Login.cshtml
+++ b/InvoiceManager/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Zaloguj się" class="btn btn-primary mt-3" />
+                        <input type="submit" value="Zaloguj się" class="btn btn-primary mt-3 mb-3" />
                     </div>
                 </div>
                 <p>
