--- a/InvoiceManager/Views/Invoice/Invoice.cshtml
+++ b/InvoiceManager/Views/Invoice/Invoice.cshtml
@@ -20,6 +20,7 @@
     <div class="col-lg-6">
         @using (Html.BeginForm("Invoice", "Invoice"))
         {
+            @Html.AntiForgeryToken()
 
             if (Model.Invoice.Id == 0)
             {
