--- a/InvoiceManager/Views/Invoice/InvoicePosition.cshtml
+++ b/InvoiceManager/Views/Invoice/InvoicePosition.cshtml
@@ -9,6 +9,8 @@
 
 @using (Html.BeginForm("InvoicePosition", "Invoice"))
 {
+    @Html.AntiForgeryToken()
+
     if (Model.InvoicePosition.Id == 0)
     {
         <p class="alert alert-info mt-4 mb-4">
@@ -69,6 +71,6 @@
                 return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
             }
         });
-                  
+
     </script>
-    }
+}
