--- a/InvoiceManager/Views/Product/Product.cshtml
+++ b/InvoiceManager/Views/Product/Product.cshtml
@@ -8,6 +8,8 @@
     <div class="col-lg-6">
         @using (Html.BeginForm("Product", "Product"))
         {
+            @Html.AntiForgeryToken()
+
             if (Model.Product.Id == 0)
             {
                 <p class="alert alert-info mt-4 mb-4">
