--- a/InvoiceManager/Views/Shared/_Layout.cshtml
+++ b/InvoiceManager/Views/Shared/_Layout.cshtml
@@ -52,6 +52,24 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
+
+<div class="privacyPoliceInfo" style="display: none;">
+    Serwis wykorzystując pliki cookies. Korzystajac ze strony wyrazasz zgode na wykorzystywanie plików cookies.
+    <button onclick="closePrivacyPolice()" type="button" class="btn btn-light btn-sm mx-3 my-1 privacyPoliceBtn">Ok, rozumiem</button>
+</div>
+
+    <script>
+        function closePrivacyPolice() {
+            $('.privacyPoliceInfo').css("display", "none");
+            $.cookie("privacyPolice", "1", { path: '/', sxpire: 365 });
+        }
+
+        $(document).ready(function () {
+            if ($.cookie("privacyPolice") !== "1")
+                $('.privacyPoliceInfo').css("display", "");
+        });
+    </script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
