--- a/InvoiceManager/Views/Account/Register.cshtml
+++ b/InvoiceManager/Views/Account/Register.cshtml
@@ -15,12 +15,14 @@
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Email)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Password)
         </div>
     </div>
     <div class="form-group">
@@ -34,30 +36,35 @@
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Name)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address.PostalCode, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.PostalCode, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Address.PostalCode)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address.City, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.City, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Address.City)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address.Street, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.Street, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Address.Street)
         </div>
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Address.Number, new { @class = "col-md-2 control-label mt-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Address.Number, new { @class = "form-control" })
+            @Html.ValidationMessageFor(x => x.Address.Number)
         </div>
     </div>
 
