--- a/InvoiceManager/Views/Home/Contact.cshtml
+++ b/InvoiceManager/Views/Home/Contact.cshtml
@@ -1,15 +1,52 @@
-﻿@{
+﻿@model  InvoiceManager.Models.ViewModels.EmailContactViewModel
+
+@{
     ViewBag.Title = "Kontakt";
 }
+
 <h2>@ViewBag.Title.</h2>
 
-<address>
-    <strong>Robert Wolniewicz</strong>
-    <br />
-    Programista .NET<br />
-</address>
 
-<address>
-    <strong>Email:</strong>   <a href="mailto:robert_wol@wp.pl">robert_wol@wp.pl</a><br />
-    <strong>Telefon:</strong> 502574837
-</address>
+<h4>Napisz do mnie</h4>
+
+<div class="row">
+    <div class="col-lg-6">
+        @using (@Html.BeginForm("SendEmail", "Home", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+        {
+            <p class="alert alert-info mt-4 mb-4">
+                Pola Email, Temat i Wiadomość są
+                <strong>wymagane</strong>
+            </p>
+
+            <div class="mb-1">
+                @Html.LabelFor(x => x.SenderEmail)
+                @Html.TextBoxFor(x => x.SenderEmail, new { @class = "form-control", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(x => x.SenderEmail)
+            </div>
+
+            <div class="mb-1">
+                @Html.LabelFor(x => x.Subject)
+                @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Subject)
+            </div>
+
+            <div class="mb-1">
+                @Html.LabelFor(x => x.Message)
+                @Html.TextAreaFor(x => x.Message, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Message)
+            </div>
+
+            <div class="mb-1 mt-4">
+                @Html.Label("Załącz")
+                <input type="file" name="fileUploader" />
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-lg mb-5 mt-5" onclick="return confirm('Czy na pewno chcesz wysłać wiadomość?')">
+                Wyślij
+            </button>
+
+            @ViewBag.Message
+
+        }
+    </div>
+</div>
