--- a/InvoiceManager/Views/Shared/_Layout.cshtml
+++ b/InvoiceManager/Views/Shared/_Layout.cshtml
@@ -11,11 +11,13 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+
         <div class="container">
             <a class="navbar-brand" href="@Url.Action("Invoices", "Invoice")">Faktury</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                 <ul class="navbar-nav mr-auto">
@@ -32,7 +34,7 @@
                     <li class="nav-item active">
                         @Html.ActionLink("O mnie", "About", "Home", null, new { @class = "nav-link" })
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         @Html.ActionLink("Kontakt", "Contact", "Home", null, new { @class = "nav-link" })
                     </li>
                 </ul>
